--- a/tox.ini
+++ b/tox.ini
@@ -2,14 +2,8 @@
 envlist=py26, py27
 
 [testenv]
+changedir=test
 commands=py.test --cov dnaloop {posargs}
 deps=
     pytest
     pytest-cov
-
-[testenv:flake8]
-basepython = python2.7
-deps =
-    flake8
-commands =
-    flake8 dnaloop tests --max-line-length=120
