--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,28 @@
 language: python
+
 python:
   - "2.6"
   - "2.7"
+
+before_install:
+  - apt-get install samtools
+  - cd test
+  - git clone https://github.com/lh3/bwa.git
+  - cd bwa
+  - git checkout tags/0.7.12
+  - make
+  - cd ..
+  - PATH=`pwd`/bwa:$PATH
+  - git clone https://github.com/arq5x/bedtools2.git
+  - cd bedtools2
+  - git checkout tags/v2.25.0
+  - make
+  - cd ..
+  - PATH=`pwd`/bedtools2/bin:$PATH
+  - cd ..
+
 install:
  - pip install tox
+
 script: 
  - tox
