--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
     - samtools
     
 before_install:
-  - pip install MACS2
+  - pip install --no-deps MACS2
   - cd test
   - git clone https://github.com/lh3/bwa.git
   - cd bwa
