--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 
 python:
-  - "2.6"
   - "2.7"
 
 addons:
@@ -10,7 +9,13 @@ addons:
     - samtools
     
 before_install:
-  - pip install --no-deps MACS2
+  # Install Miniconda
+  - travis_retry wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
+  # Install bwa
   - cd test
   - git clone https://github.com/lh3/bwa.git
   - cd bwa
@@ -18,6 +23,7 @@ before_install:
   - make
   - cd ..
   - PATH=`pwd`/bwa:$PATH
+  # Install bedtools
   - git clone https://github.com/arq5x/bedtools2.git
   - cd bedtools2
   - git checkout tags/v2.25.0
@@ -27,7 +33,9 @@ before_install:
   - cd ..
 
 install:
- - pip install tox
+ - conda install --yes numpy=1.9.1 
+ - conda install --yes tox
+ - python setup.py install
 
 script: 
- - tox
+ - cd test && py.test
