--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,6 @@ install:
 
 script: 
  - macs2 --help
- - cd test && py.test
+ - cd test 
+ - preprocess_chiapet --outnaive_vs_primed --bwa-index test_genome.fa --keep-temp-files samples.txt'
+ - py.test
